--- a/app_demo_project/testcase/test_search.yml
+++ b/app_demo_project/testcase/test_search.yml
@@ -7,7 +7,7 @@ set_up:
 test_01:
   - data:
       key: ['阿里巴巴','腾讯']
-  - shares_page.search: {key: $key}
+  - shares_page.search: {key: ${key}}
   - shares_page.get_search_result: {}
   - validate:
     - in: [$key,'$search_elements']
