完成数据驱动 --无法单独生成用例 日志还未完成

--- a/web_demo_project/testcase/test_search.yml
+++ b/web_demo_project/testcase/test_search.yml
@@ -4,7 +4,8 @@ data:
     key: ['selenium','appium']
 
 test_search:
+  - main_page.init: {}
   - main_page.search_keyword: {key: '${key}'}
   - search_page.get_search_result_list: {}
   - validate:
-      - in: [selenium,'${search_elements}']
+      - in: ['${key}','${search_elements}']
