解决动态导入 和执行js脚本

--- a/web_demo_project/page/main_page.yml
+++ b/web_demo_project/page/main_page.yml
@@ -4,7 +4,7 @@ main_page:
       - get: "https://sa-test.gemdaletech.com/cloud/home"
       - token_helper.get_token: ""
       - save: token
-      - js_script: 'localStorage.setItem("cloudUser",\"${token}\")'
+      - js_script: localStorage.setItem('cloudUser','${token}')
       - refresh: ()
     search_keyword:
       - find: ['id','kw']
