--- a/web_sa_4s_workorder/page/4s_page.yml
+++ b/web_sa_4s_workorder/page/4s_page.yml
@@ -1,5 +1,6 @@
 4s_page:
   actions:
     into_4s_workorder_page:
-      - click: ['xpath','//*[text()="作业工单"]']
+      - find: ['xpath','//*[text()=" 作业工单 "]']
+      - click: ()
       - return: 4s_workorder_page
