--- a/web_sa_4s_workorder/testcase/test_search.yml
+++ b/web_sa_4s_workorder/testcase/test_search.yml
@@ -2,6 +2,8 @@ data:
   test_search:
     project: [金地威新软件园,深圳金地物业]
     status: [待指派,待处理]
+  test_search_with_order_num:
+    order_num: [GD202208090000010026,GD202208090000010025]
 
 test_search:
   - main_page.init: {}
@@ -12,3 +14,12 @@ test_search:
   - validate:
       - in_each: ['${project}','${search_project_result}']
       - in_each: ['${status}','${search_status_result}']
+
+test_search_with_order_num:
+  - main_page.init: {}
+  - main_page.into_4s_page: {}
+  - 4s_page.into_4s_workorder_page: {}
+  - 4s_workorder_page.search_workorder: {order_num: '${order_num}'}
+  - 4s_workorder_page.get_search_res: {}
+  - validate:
+      - in_each: [ '${order_num}','${search_order_num_result}' ]
