--- a/web_sa_4s_workorder/page/4s_page.yml
+++ b/web_sa_4s_workorder/page/4s_page.yml
@@ -4,3 +4,10 @@
       - find: ['xpath','//*[text()=" 作业工单 "]']
       - click: ()
       - return: 4s_workorder_page
+
+    into_point_page:
+      - find: [ 'xpath','//*[text()=" 项目配置 "]' ]
+      - click: ()
+      - find: [ 'xpath','//*[text()=" 点位管理 "]' ]
+      - click: ()
+      - return: point_manager_page
