--- a/mini_project/base/capability_conf.yml
+++ b/mini_project/base/capability_conf.yml
@@ -12,7 +12,8 @@ capability:
     # 执行完后不停止app
     # dontStopAppOnReset: "true"
     # 驱动相关
-    "chromedriverExecutable": "G:\\chromedriver\\chromedriver_86\\chromedriver.exe"
+#    "chromedriverExecutable": "G:\\chromedriver\\chromedriver_86\\chromedriver.exe"
+    "chromedriverExecutable": "/Users/chnjx/devApps/driver/all_driver/chromedriver_86"
 #    "chromeOptions": { "androidProcess": "com.tencent.mm:appbrand0" }
     "recreateChromeDriverSessions": True
     "unicodeKeyboard": True
