--- a/mini_project/base/capability_conf.yml
+++ b/mini_project/base/capability_conf.yml
@@ -10,10 +10,12 @@ capability:
     # 不重置app
     "noReset": "true"
     # 执行完后不停止app
-    # dontStopAppOnReset: "true"
+#    "dontStopAppOnReset": "true"
     # 驱动相关
 #    "chromedriverExecutable": "G:\\chromedriver\\chromedriver_86\\chromedriver.exe"
-    "chromedriverExecutable": "/Users/chnjx/devApps/driver/all_driver/chromedriver_86"
+#    "chromedriverExecutable": "/Users/chnjx/devApps/driver/all_driver/chromedriver_86"
+    "chromedriverExecutable": "D:\\GoogleDriver\\chromedriver_86.0.4240.exe"
+
 #    "chromeOptions": { "androidProcess": "com.tencent.mm:appbrand0" }
     "recreateChromeDriverSessions": True
     "unicodeKeyboard": True
