增加用例自动转换

--- a/app_demo_project/base/capability_conf.yml
+++ b/app_demo_project/base/capability_conf.yml
@@ -4,9 +4,9 @@ capability:
     # 设备名称(随意填写)
     "deviceName": "HuaWeiP30"
     # 应用程序的包名
-    "appPackage": "com.xueqiu.android"
+    "appPackage": "com.tencent.mtt"
     # 应用程序的启动页面
-    "appActivity": ".view.WelcomeActivityAlias"
+    "appActivity": ".MainActivity"
     # 不重置app
     "noReset": "true"
     # 执行完后不停止app
